# adventofcode2024

./: pyproject.toml
tasks/: day1.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
utils/: helpers.py  input_formatters.py  pathfinding.py  position_search_problem.py  test_and_run.py
